<resources>

    <string name="app_name">BlackJack</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_black_jack_main">BlackJack</string>
    <string name="btnPedirCarta">PEDIR CARTA</string>
    <string name="btnFicar">PERMANECER (HOLD)</string>
    <string name="txtPlayerCpu">Android</string>
    <string name="txtPlayerHuman">Eu</string>
    <string name="btNovoJogo">Novo jogo</string>
    <string name="btRanking">Ranking</string>
    <string name="btSair">Sair</string>
    <string name="title_activity_novo_jogo">NovoJogo</string>
    <string name="edNome">Nome do jogador</string>
    <string name="btContinuar">Continuar</string>
    <string name="btVoltar">Voltar</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_black_jack">BlackJack</string>
    <string name="bt10p">R$10</string>
    <string name="bt50p">R$50</string>
    <string name="bt100p">R$100</string>
    <string name="menu_sair">Sair</string>
    

</resources>